use not pattern in hasNext